--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,9 @@
                                     <a href="{% url 'stock_movement_view' %}">Stock Move</a>
                                 </li>
                                 <li class="submenu-item ">
+                                    <a href="{% url 'report_view' %}">Report</a>
+                                </li>
+                                <li class="submenu-item ">
                                     <a href="{% url 'stock_view' %}">Stock</a>
                                 </li>
                                 <li class="submenu-item ">
