--- a/templates/base.html
+++ b/templates/base.html
@@ -188,8 +188,6 @@
                     </section>
                 </div>
 
-
-
                 <footer>
                     <div class="footer clearfix mb-0 text-muted">
                         <div class="float-start">
@@ -197,7 +195,7 @@
                         </div>
                         <div class="float-end">
                             <p>Crafted with <span class="text-danger"><i class="bi bi-heart-fill icon-mid"></i></span>
-                                by <a href="https://ahmadsaugi.com">Saugi</a></p>
+                                by <a href="#">Null</a></p>
                         </div>
                     </div>
                 </footer>
