--- a/templates/stock_movement_list.html
+++ b/templates/stock_movement_list.html
@@ -43,21 +43,22 @@
             <div class="list-group small" id="movementsList" style="min-width: 720px;">
 
                 <!-- HEADER -->
-                <div class="list-group-item py-1 fw-bold bg-light">
-                    <div class="d-flex">
-                        <span class="me-2" style="width:14%">Product</span>
-                        <span class="me-2" style="width:12%">Branch</span>
-                        <span class="me-2" style="width:6%">Type</span>
-                        <span class="me-2 text-center" style="width:6%">Qty</span>
-                        <span class="me-2" style="width:12%">Amount</span>
-                        <span class="me-2" style="width:12%">Profit</span>
-                        <span class="me-2" style="width:10%">Pay</span>
-                        <span class="me-2" style="width:10%">Notes</span>
-                        <span class="me-2" style="width:10%">By</span>
-                        <span class="me-2" style="width:8%">Time</span>
-                        <span style="width:6%">Act</span>
-                    </div>
-                </div>
+<div class="list-group-item py-1 fw-bold bg-body-tertiary">
+    <div class="d-flex">
+        <span class="me-2" style="width:14%">Product</span>
+        <span class="me-2" style="width:12%">Branch</span>
+        <span class="me-2" style="width:6%">Type</span>
+        <span class="me-2 text-center" style="width:6%">Qty</span>
+        <span class="me-2" style="width:12%">Amount</span>
+        <span class="me-2" style="width:12%">Profit</span>
+        <span class="me-2" style="width:10%">Pay</span>
+        <span class="me-2" style="width:10%">Notes</span>
+        <span class="me-2" style="width:10%">By</span>
+        <span class="me-2" style="width:8%">Time</span>
+        <span style="width:6%">Act</span>
+    </div>
+</div>
+
 
                 {% for movement in movements %}
                 <div class="list-group-item py-1 movement-row">
