--- a/templates/base.html
+++ b/templates/base.html
@@ -20,12 +20,14 @@
     <link rel="stylesheet" href="{% static 'assets/css/app.css' %}">
     <link rel="shortcut icon" href="{% static 'assets/images/favicon.svg' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'assets/vendors/toastify/toastify.css' %}">
-        <link rel="stylesheet" href="{% static 'assets/vendors/simple-datatables/style.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/vendors/simple-datatables/style.css' %}">
+
+    <link rel="stylesheet" crossorigin href="{% static 'assets/compiled/css/app-dark.css ' %}" />
 
 </head>
 
 <body>
-
+    <script src="{% static 'assets/static/js/initTheme.js' %}"></script>
     <!-- --------------- SESSION CHECK (ADDED) --------------- -->
     {% if not request.session.user_id and not request.session.admin_id %}
     <script>
@@ -46,6 +48,36 @@
                         <div class="toggler">
                             <a href="#" class="sidebar-hide d-xl-none d-block"><i class="bi bi-x bi-middle"></i></a>
                         </div>
+                        <div class="theme-toggle d-flex gap-2 align-items-center mt-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                aria-hidden="true" role="img" class="iconify iconify--system-uicons" width="20"
+                                height="20" preserveAspectRatio="xMidYMid meet" viewBox="0 0 21 21">
+                                <g fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path
+                                        d="M10.5 14.5c2.219 0 4-1.763 4-3.982a4.003 4.003 0 0 0-4-4.018c-2.219 0-4 1.781-4 4c0 2.219 1.781 4 4 4zM4.136 4.136L5.55 5.55m9.9 9.9l1.414 1.414M1.5 10.5h2m14 0h2M4.135 16.863L5.55 15.45m9.899-9.9l1.414-1.415M10.5 19.5v-2m0-14v-2"
+                                        opacity=".3"></path>
+                                    <g transform="translate(-210 -1)">
+                                        <path d="M220.5 2.5v2m6.5.5l-1.5 1.5"></path>
+                                        <circle cx="220.5" cy="11.5" r="4"></circle>
+                                        <path d="m214 5l1.5 1.5m5 14v-2m6.5-.5l-1.5-1.5M214 18l1.5-1.5m-4-5h2m14 0h2">
+                                        </path>
+                                    </g>
+                                </g>
+                            </svg>
+                            <div class="form-check form-switch fs-6">
+                                <input class="form-check-input me-0" type="checkbox" id="toggle-dark"
+                                    style="cursor: pointer" />
+                                <label class="form-check-label"></label>
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                aria-hidden="true" role="img" class="iconify iconify--mdi" width="20" height="20"
+                                preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                                <path fill="currentColor"
+                                    d="m17.75 4.09l-2.53 1.94l.91 3.06l-2.63-1.81l-2.63 1.81l.91-3.06l-2.53-1.94L12.44 4l1.06-3l1.06 3l3.19.09m3.5 6.91l-1.64 1.25l.59 1.98l-1.7-1.17l-1.7 1.17l.59-1.98L15.75 11l2.06-.05L18.5 9l.69 1.95l2.06.05m-2.28 4.95c.83-.08 1.72 1.1 1.19 1.85c-.32.45-.66.87-1.08 1.27C15.17 23 8.84 23 4.94 19.07c-3.91-3.9-3.91-10.24 0-14.14c.4-.4.82-.76 1.27-1.08c.75-.53 1.93.36 1.85 1.19c-.27 2.86.69 5.83 2.89 8.02a9.96 9.96 0 0 0 8.02 2.89m-1.64 2.02a12.08 12.08 0 0 1-7.8-3.47c-2.17-2.19-3.33-5-3.49-7.82c-2.81 3.14-2.7 7.96.31 10.98c3.02 3.01 7.84 3.12 10.98.31Z">
+                                </path>
+                            </svg>
+                        </div>
                     </div>
                 </div>
                 <div class="sidebar-menu">
@@ -65,7 +97,7 @@
                                 <span>Layouts</span>
                             </a>
                             <ul class="submenu ">
-                                <li class="submenu-item ">
+                                <li class="submenu-item active">
                                     <a href="{% url 'stock_movement_view' %}">Stock Move</a>
                                 </li>
                                 <li class="submenu-item ">
@@ -79,8 +111,23 @@
                                 </li>
                             </ul>
                         </li>
-
-                    </ul>
+                        <li class="sidebar-item active has-sub">
+                            <a href="#" class="sidebar-link">
+                                <i class="bi bi-person-circle"></i>
+                                <span>Account</span>
+                            </a>
+                            <ul class="submenu">
+                                <li class="submenu-item active">
+                                    <a href="{% url 'profile_view' %}" class="submenu-link"></a>
+                                </li>
+                                <li class="submenu-item active">
+                                    <a href="{% url 'profile_view' %}" class="submenu-link">Profile</a>
+                                </li>
+                                <li class="submenu-item">
+                                    <a href="{% url 'change_auth_view' %}" class="submenu-link">Security</a>
+                                </li>
+                            </ul>
+                        </li>
                 </div>
                 <button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
             </div>
@@ -92,7 +139,6 @@
                         <a href="#" class="burger-btn d-block">
                             <i class="bi bi-justify fs-3"></i>
                         </a>
-
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -128,10 +174,11 @@
                             <div class="dropdown">
                                 <a href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                     <div class="user-menu d-flex">
-                                    <div class="user-name text-end me-3">
-                                        <h6 class="mb-0 text-gray-600">{{ request.session.user_name|default:"Guest" }}</h6>
-                                        <p class="mb-0 text-sm-center text-gray-600">{{ request.session.role|default:"User"|title }}</p>
-                                    </div>
+                                        <div class="user-name text-end me-3">
+                                            <h6 class="mb-0 text-gray-600">{{ request.session.user_name|default:"Guest" }}</h6>
+                                            <p class="mb-0 text-sm-center text-gray-600">
+                                                {{request.session.role|default:"User"|title }}</p>
+                                        </div>
                                         <div class="user-img d-flex align-items-center">
                                             <div class="avatar avatar-md">
                                                 <img src="{% static 'assets/images/faces/1.jpg' %}">
@@ -143,8 +190,9 @@
                                     <li>
                                         <h6 class="dropdown-header">Hello, {{ request.session.user_name }}!</h6>
                                     </li>
-                                    <li><a class="dropdown-item" href="#"><i class="icon-mid bi bi-person me-2"></i> My
-                                            Profile</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'profile_view' %}">
+                                            <i class="icon-mid bi bi-person me-2"></i> My Profile</a>
+                                    </li>
                                     <li><a class="dropdown-item" href="#"><i class="icon-mid bi bi-gear me-2"></i>
                                             Settings</a></li>
                                     <li><a class="dropdown-item" href="#"><i class="icon-mid bi bi-wallet me-2"></i>
@@ -203,8 +251,6 @@
         </div>
     </div>
 
-
-    
     <script src="{% static 'assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js' %}"></script>
     <script src="{% static 'assets/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'assets/vendors/toastify/toastify.js' %}"></script>
@@ -214,7 +260,8 @@
     <script src="{% static 'assets/vendors/apexcharts/apexcharts.js' %}"></script>
     <script src="{% static 'assets/vendors/simple-datatables/simple-datatables.js' %}"></script>
 
-
+    <script src="{% static 'assets/js/components/dark.js' %}" defer></script>
+    <script src="assets/compiled/js/app.js"></script>
 </body>
 {% if messages %}
 {% for message in messages %}
