--- a/templates/base.html
+++ b/templates/base.html
@@ -118,9 +118,9 @@
                             </a>
                             <ul class="submenu">
                                 <li class="submenu-item active">
-                                    <a href="{% url 'profile_view' %}" class="submenu-link"></a>
+                                    <a href="{% url 'create_account_view' %}" class="submenu-link">Create user</a>
                                 </li>
-                                <li class="submenu-item active">
+                                <li class="submenu-item ">
                                     <a href="{% url 'profile_view' %}" class="submenu-link">Profile</a>
                                 </li>
                                 <li class="submenu-item">
