create account users: added clear form, urls and view working good

--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@
                             </a>
                             <ul class="submenu">
                                 <li class="submenu-item active">
-                                    <a href="{% url 'create_account_view' %}" class="submenu-link">Create user</a>
+                                    <a href="{% url 'create_user_wizard' %}" class="submenu-link">Create user</a>
                                 </li>
                                 <li class="submenu-item ">
                                     <a href="{% url 'profile_view' %}" class="submenu-link">Profile</a>
