--- a/templates/create_user_account.html
+++ b/templates/create_user_account.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="card-body">
-        <form id="example-form" method="POST" action="{% url 'create_user_wizard' %}">
+        <form id="example-form" method="POST" action="{% url 'create_user_account' %}">
             {% csrf_token %}
             <div>
 
