--- a/templates/base.html
+++ b/templates/base.html
@@ -142,7 +142,6 @@
                                 <li class="submenu-item">
                                     <a href="{% url 'change_auth_view' %}" class="submenu-link">Security</a>
                                 </li>
-
                             </ul>
 
                         </li>
@@ -205,21 +204,15 @@
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-                                    <li>
-                                        <h6 class="dropdown-header">Hello, {{ request.session.user_name }}!</h6>
-                                    </li>
-                                    <li><a class="dropdown-item" href="{% url 'profile_view' %}">
-                                            <i class="icon-mid bi bi-person me-2"></i> My Profile</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#"><i class="icon-mid bi bi-gear me-2"></i>
-                                            Settings</a></li>
-                                    <li><a class="dropdown-item" href="#"><i class="icon-mid bi bi-wallet me-2"></i>
-                                            Wallet</a></li>
+                                    <li><h6 class="dropdown-header">Hello, {{ request.session.user_name }}!</h6></li>
+                                    <li><a class="dropdown-item" href="{% url 'profile_view' %}"><i class="icon-mid bi bi-person me-2"></i> My Profile</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'settings_view' %}"><i class="icon-mid bi bi-gear me-2"></i>Settings</a></li>
+                                    <li><a class="dropdown-item" href="#"><i class="icon-mid bi bi-wallet me-2"></i>Wallet</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
                                     <li><a class="dropdown-item" href="{% url 'logout_view' %}">
-                                            <i class="icon-mid bi bi-box-arrow-left me-2"></i> Logout</a>
+                                        <i class="icon-mid bi bi-box-arrow-left me-2"></i> Logout</a>
                                     </li>
                                 </ul>
                             </div>
