Forgat password&rest it complete

--- a/templates/report.html
+++ b/templates/report.html
@@ -21,7 +21,7 @@
             </div>
 
             <!-- BRANCH REPORTS -->
-            <div class="accordion" id="branchAccordion">
+            <div class="accordion" id="branchAccordion" style="min-width: 720px;">
 
                 {% for item in branch_reports %}
                 <div class="card mb-3">
@@ -45,7 +45,7 @@
                         <div class="card-body">
 
                             <!-- SUMMARY -->
-                            <div class="row">
+                    <div class="row">
                        <div class="row">
                             <div class="col-6 col-lg-3 col-md-6">
                                 <div class="card">
@@ -122,7 +122,7 @@
                     <!-- MOVEMENTS LIST : SMALL + COMPACT -->
                         <div class="list-group small" id="movementsList" style="min-width: 720px;">
                             <!-- HEADER -->
-                                    <div class="list-group-item py-1 fw-bold bg-light">
+                                    <div class="list-group-item py-1 fw-bold bg-body-tertiary">
                                         <div class="d-flex">
                                             <span class="me-2" style="width:25%">Product</span>
                                             <span class="me-2" style="width:6%">Qty</span>
