--- a/templates/stock_movement_list_all_records.html
+++ b/templates/stock_movement_list_all_records.html
@@ -26,7 +26,7 @@
             <div class="list-group small" id="movementsList" style="min-width: 720px;">
 
                 <!-- HEADER -->
-                <div class="list-group-item py-1 fw-bold bg-light">
+                <div class="list-group-item py-1 fw-bold bg-body-tertiary">
                     <div class="d-flex">
                         <span class="me-2" style="width:14%">Product</span>
                         <span class="me-2" style="width:12%">Branch</span>
