--- a/templates/auth-login.html
+++ b/templates/auth-login.html
@@ -67,7 +67,7 @@
                         <p class="text-gray-600">Don't have an account? <a href="auth-register.html"
                                 class="font-bold">Sign
                                 up</a>.</p>
-                        <p><a class="font-bold" href="auth-forgot-password.html">Forgot password?</a>.</p>
+                        <p><a class="font-bold" href="{% url 'forgot-password-otp' %}">Forgot password?</a>.</p>
                     </div>
                 </div>
             </div>
